samples/fail/undeclared_var.c
int main() {
    int x = 1;
    y = x + 2;
    return x;
}
